2009-02-17  Dominique Dumont  <dominique.dumont@hp.com> v0.400

	* lib/Config/Augeas.xs (match): dies if aug_match returns -1. Perl
	programmer can choose to trap this failure with eval or Error
	module.

	* lib/Config/Augeas.pm (match): cleanup trailing slashes in
	path (required by new behavior of Augeas 0.4.0)

2009-01-02  Domi  <domi@bilbo.maison> v0.305

	* t/Config-AugeasC.t: Removed test involving AUGROOT environment
	variable (Lead to FTBS on Debian amd64). The removed tests are
	already performed passing augeas root through aug_init.
 	
2008-11-21  Dominique Dumont  <dominique.dumont@hp.com> v0.304

	* lib/Config/Augeas.pm (print): Improved print method. Can now
	print on STDOUT, in a file with a simpler call. (e.g
	$aug_obj->print to print on STDOUT)

2008-11-16  Domi  <domi@bilbo.maison> 

	* lib/Config/Augeas.pm (set): no longer dies when trying to set a
	value to 0. Only dies when the value to set is undefined.

2008-11-07  Dominique Dumont  <dominique.dumont@hp.com> v0.303

	* Build.PL: Require Augeas 0.3.4 minimum

	* t/Config-AugeasC.t: Added tests cases for save with backup and
	save without backup. Fixed sshd_config tests

2008-10-26  Dominique Dumont  <domi.dumont@free.fr> v0.302

	* t/Config-AugeasC.t: Starting from version 0.3.2, Augeas no
	longer writes a file when its data was not modified. This change
	of behavior broke this test. This test is now fixed to cope with
	this change (which makes sense).
	
2008-08-29  Dominique Dumont  <dominique.dumont@hp.com> v0.301

	* lib/Config/Augeas.pm (move): New method for Augeas 0.3.0 new
	aug_mv function. 'move' can also be called with 'mv'

2008-07-30  Dominique Dumont  <dominique.dumont@hp.com> v0.203

	* t/Config-Augeas.t: Fixed test that broke with Augeas 0.2.2

2008-07-29  Dominique Dumont  <dominique.dumont@hp.com> v0.202

	* t/Config-Augeas*.t: Removed hardcoded lense path now that this
	bug is fixed in Augeas

2008-07-28  Dominique Dumont  

	* lib/Config/Augeas.xs: Backported for Perl 5.8
